--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+  <img
+  src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fstaticctf.ubisoft.com%2FJ3yJr34U2pZ2Ieem48Dwy9uqj5PNUQTn%2F4jk9umchC6RomrmUMzJj4k%2Fae72f547328f84428d4b98a663bceec6%2Facm-page-meta-960x540.jpg&tbnid=ueS09DkR5pXTlM&vet=12ahUKEwjIx6uh-7D_AhVGmycCHahLA4QQMygCegUIARDHAQ..i&imgrefurl=https%3A%2F%2Fwww.ubisoft.com%2Fen-us%2Fgame%2Fassassins-creed%2Fmirage&docid=ZGIWt4nwFFnufM&w=960&h=540&q=assassin%27s%20creed%20mirage&ved=2ahUKEwjIx6uh-7D_AhVGmycCHahLA4QQMygCegUIARDHAQ"
+  />
+
+  <img
+  src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fblog.playstation.com%2Ftachyon%2F2023%2F05%2Ff2b10521684c73ec5048795f80c356d3193da2f5.jpg%3Fresize%3D1088%252C612%26crop_strategy%3Dsmart&tbnid=yMoZQdFGSrhLdM&vet=12ahUKEwiWy5nG-7D_AhWIvicCHTslAW8QMygBegUIARDiAQ..i&imgrefurl=https%3A%2F%2Fblog.playstation.com%2F2023%2F05%2F24%2Fmarvels-spider-man-2-gameplay-revealed%2F&docid=Mfx_sQKdeW80vM&w=1088&h=612&q=marvel%20spider%20man%202&ved=2ahUKEwiWy5nG-7D_AhWIvicCHTslAW8QMygBegUIARDiAQ"
+  alt="Marvel Spiderman 2"
+  />
+  
+  <img
+  src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fm.media-amazon.com%2Fimages%2FM%2FMV5BNzNkYmE1NDYtMmI4Mi00YjU2LTkxZDEtMWI0ZDE4MTczZDRjXkEyXkFqcGdeQXVyMDM2NDM2MQ%40%40._V1_FMjpg_UX1000_.jpg&tbnid=eo0adBHKw_azxM&vet=12ahUKEwj9toSV_LD_AhVMpycCHQprA6EQMygAegUIARDiAQ..i&imgrefurl=https%3A%2F%2Fwww.imdb.com%2Ftitle%2Ftt3427252%2F&docid=83x7G-Wch_rrAM&w=1000&h=1483&itg=1&q=the%20boogeyman&ved=2ahUKEwj9toSV_LD_AhVMpycCHQprA6EQMygAegUIARDiAQ"
+  alt="The Boogeyman"
+  title="A nice movie"
+  />
   </body>
 </html>
